--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Convert WhatsApp to Signal</title>
 
     <!-- jQuery 3.5.1 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"
@@ -69,12 +70,22 @@
         b {
             white-space: nowrap;
         }
+
+        span#owner {
+            font-size: 1rem;
+            margin-bottom: .5rem;
+            font-weight: 500;
+            line-height: 1.2;
+        }
     </style>
 </head>
 
 <body>
     <div class="container my-3" id="app">
-        <h4>ConvertWhatsAppToSignal</h4>
+        <h4>
+            js-convert-whatsapp-to-signal
+            <span id="owner">by <a href="https://github.com/DemChing">Dem Ching</a></span>
+        </h4>
         <div class="row mt-3">
             <div class="col">
                 <div class="form-group">
